# yatwotoo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: areas.py  config.py  consts.py  main.py  models.py  worker.py
app/notifications/: callmebot.py  dispatcher.py  email.py  telegram.py
app/routes/: api.py  pages.py  searches.py
app/scheduler/: jobs.py
app/scraper/: sync.py  yad2_client.py
app/search/: engine.py
app/templates/: base.html  dashboard.html  listing_detail.html  listings.html  map.html
app/templates/partials/: listing_list.html
next/: .env.example  .gitignore  package-lock.json  package.json  vercel.json
next/scripts/: dump-data.mjs  migrate-mongo-to-supabase.mjs  sync_mongo_to_supabase.py
next/src/: middleware.ts
next/src/app/: layout.tsx  page.tsx
next/src/app/api/board/: route.ts
next/src/app/api/board/[id]/: route.ts
next/src/app/api/board/reorder/: route.ts
next/src/app/api/cities/: route.ts
next/src/app/api/cron/cleanup/: route.ts
next/src/app/api/cron/enrich/: route.ts
next/src/app/api/cron/poll/: route.ts
next/src/app/api/listings/: route.ts
next/src/app/api/listings/[yad2Id]/: route.ts
next/src/app/api/listings/[yad2Id]/hide/: route.ts
next/src/app/api/listings/[yad2Id]/unhide/: route.ts
next/src/app/api/markers/: route.ts
next/src/app/api/neighborhoods/: route.ts
next/src/app/api/scrape/cleanup/: route.ts
next/src/app/api/scrape/enrich/: route.ts
next/src/app/api/scrape/start/: route.ts
next/src/app/api/scrape/status/: route.ts
next/src/app/api/scrape/step/: route.ts
next/src/app/api/searches/: route.ts
next/src/app/api/searches/[id]/: route.ts
next/src/app/api/settings/: route.ts
next/src/app/api/settings/test/[channel]/: route.ts
next/src/app/auth/callback/: route.ts
next/src/app/listings/: page.tsx
next/src/app/listings/[yad2Id]/: page.tsx
next/src/app/listings/hidden/: layout.tsx  page.tsx
next/src/app/login/: page.tsx
next/src/app/map/: layout.tsx  page.tsx
next/src/app/settings/: layout.tsx  page.tsx
next/src/components/: dashboard-client.tsx  listing-card.tsx  listing-detail-client.tsx  listing-map-modal.tsx  listings-client.tsx  map-client.tsx  map-view.tsx  navbar.tsx
next/src/components/board/: board-card.tsx  board-client.tsx  board-column.tsx
next/src/lib/: constants.ts
next/src/lib/notifications/: dispatcher.ts  email.ts  telegram.ts  whatsapp.ts
next/src/lib/scraper/: sync.ts  yad2-client.ts
next/src/lib/search/: engine.ts
next/src/lib/supabase/: auth-helper.ts  client.ts  server.ts
next/src/types/: database.ts  index.ts
next/supabase/: config.toml  schema.sql
next/supabase/migrations/: 20240101000000_init.sql  20250517000000_board_listings.sql  20250517100000_add_user_id_rls.sql
next/tests/: setup.ts  test_api.test.ts  test_board.test.ts  test_fetch.test.ts  test_hidden_listings.test.ts  test_models.test.ts  test_notifications.test.ts  test_scraper.test.ts  test_search_engine.test.ts  test_sync.test.ts
next/tests/helpers/: supabase-mock.ts
python/: .dockerignore  .env.example  MULTI_USER_SUPPORT.md  pyproject.toml
python/app/: areas.py  consts.py  db.py
python/app/notifications/: dispatcher.py
python/app/routes/: api.py  pages.py
python/app/templates/: listings.html  map.html  settings.html
python/app/templates/partials/: listing_list.html
python/tests/: conftest.py  test_models.py  test_notifications.py
tests/: conftest.py  test_api.py  test_hidden_listings.py  test_jobs.py  test_models.py  test_notifications.py  test_scraper.py  test_search_engine.py  test_sync.py  test_worker.py
